================================================================================
Change history for ph-scale
================================================================================

HIGH PRIORITY:
- Laurie can't type into pH text field in 0.00.18, everyone else can
- Kathy reports that least significant digit of H3O concentration doesn't match what is expected

MEDIUM PRIORITY:
- use consistent H3O/OH/H2O colors for bars, molecules, particles and Water
- make zoom buttons more fun looking, maybe using GradientButtonNode?

LOW PRIORITY:
- delete MoleculeCountAlternateNode, associated developer controls, image files (*-big.png)
- hand cursors don't work on PSwing check boxes and radio buttons [Unfuddle #653]
- selection in PTextFieldNode doesn't behave properly [Unfuddle #660]


DONE:
7/14/08 - update model documentation to correct mistakes
******* version 0.00.18 (23214)
7/14/08 - move switch to custom liquid into Liquid.setPH, so that you can't set the pH unless it's a Custom liquid
7/14/08 - fix: hide drag handle for linear scale when bar height is zero
7/14/08 - rewrite portions of fill/drain model, simplify
7/14/08 - change model for combining liquids, I was given an incorrect model
7/14/08 - decouple MoleculeCountAlternateNode from the rest of the code base so that it's easy to delete
7/14/08 - workaround: clicking twice in PHTextFieldNode causes liquid to change to Custom [Unfuddle #660]
******* version 0.00.17 (23184)
7/14/08 - changing a bar sets liquid to Custom
7/14/08 - modify Custom liquid pH when Liquid.setPH is called
7/14/08 - setPickable(false) on non-interactive nodes
7/14/08 - use common font size for all controls
7/14/08 - add a line to bottom of graph, on top of bars, makes it look cleaner
7/14/08 - move some things that should be easier to find into PHScaleConstants
7/14/08 - generalize layout code in BeakerControlNode constructor
7/14/08 - fix bar drag handlers so that we can get to min values in linear scale